--- a/stilartsite.html
+++ b/stilartsite.html
@@ -23,7 +23,7 @@
                     <li><a href="index.html#om_mig">About</a></li>
                     <li><a href="index.html#om_mig">Kontakt</a></li>
                     <li><a href="stilartsite.html">Dadaisme</a></li>
-                    <li><a href="redesign.html">Residesign af TCdesign.dk</a></li>
+                    <li><a href="redesign.html">Redesign af TCdesign.dk</a></li>
                     <li><a href="prototype.html">Prototype af Fronter</a></li>
 
 
@@ -78,7 +78,9 @@
 
                 <h2 class="h2_dada">Refleksion over opgaven</h2>
 
-                <p class="tekst_opgave"> Vi fik tildelt en opgave, hvor vi blev delt ud i nogle grupper, og hvor hver gruppe fik sin egen stilart. Og ud for den stilart skulle vi lave vores egen hjemmeside som omhandlede den bestemte stilart, og min gruppe fik stilarten Dadaisme.
+                <p class="tekst_opgave"> I dette forløb fik vi tildelt en opgave, hvori den bestod af, at vi skulle lave vores første responsive website. Vi fik tildelt en stilart i nogle forskellige grupper, hvor jeg fik dadaisme. Udfra den bestemte stilart, skulle vi lave en masse research, hvor og udfra den skulle vi lave en masse research
+
+                    Vi fik tildelt en opgave, hvor vi blev delt ud i nogle grupper, og hvor hver gruppe fik sin egen stilart. Og ud for den stilart skulle vi lave vores egen hjemmeside som omhandlede den bestemte stilart, og min gruppe fik stilarten Dadaisme.
                     Først og fremmest lavede vi en masse research om dadaisme - hvad den gik ud på, og hvad den indebar. For at få et større overblik over selve stilarten, dens tendenser og farver, lavede vi først vores moodboard.
 
                     Vi blev delt ud i grupper, og fik tildelt en opgave, som gik ud på at vi skulle lave vores egen hjemmeside med en bestemt stilart. Min gruppe fik Dadaisme. Først og fremmest lavede vi en masse research om dadaisme og hvad den gik ud på, og hvad den indebar.
