opdatering på portfolio

--- a/prototype.html
+++ b/prototype.html
@@ -63,23 +63,19 @@
                 </div>
                 <h2 class="h2_proto">Formål for tema</h2>
                 <p class="tekst_tema">I temaet grundlæggende web har vi lært forskellige redskaber, såsom HTML og CSS. Vi er blevet introduceret til grundlæggende faglige begreber indenfor design af digitaler brugergrænseoverflader, digital indholdsproduktion, digital kommunikation og responsivt webdesign. Vi har lært at sætte websites op i HTML og css, og også første færdigheder inden for billedbehandling i Photoshop og layout, In-Design.</p>
-                <form action="mangler_link">
+                <form action="http://nannasiw.dk/kea/04-ux/04_03 web prototype/login.html">
                     <button type="submit">Link til prototype af Fronter
                     </button>
                 </form>
 
             </div>
 
-
-
-
-
             <div class="column">
 
 
                 <h2 class="h2_proto">Refleksion over opgaven</h2>
 
-                <p class="tekst_opgave"> Vi fik tildelt en opgave, hvor vi blev delt ud i nogle grupper, og hvor hver grupper fik sin egen stilart. Og ud for den stilart skulle vi lave vores egen hjemmeside som omhandlede den bestemte stilart, og min gruppe fik stilarten Dadaisme.
+                <p class="tekst_opgave"> FOCUS VAR PROJEKTLEDELSE OG GRUPPEARBEJDEVi fik tildelt en opgave, hvor vi blev delt ud i nogle grupper, og hvor hver grupper fik sin egen stilart. Og ud for den stilart skulle vi lave vores egen hjemmeside som omhandlede den bestemte stilart, og min gruppe fik stilarten Dadaisme.
                     Først og fremmest lavede vi en masse research om dadaisme - hvad den gik ud på, og hvad den indebar. For at få et større overblik over selve stilarten, dens tendenser og farver, lavede vi først vores moodboard.
 
                     Vi blev delt ud i grupper, og fik tildelt en opgave, som gik ud på at vi skulle lave vores egen hjemmeside med en bestemt stilart. Min gruppe fik Dadaisme. Først og fremmest lavede vi en masse research om dadaisme og hvad den gik ud på, og hvad den indebar.
