--- a/redesign.html
+++ b/redesign.html
@@ -59,12 +59,15 @@
 
                 </div>
 
-                <form action="mangler_link">
-                    <button type="submit">Link til dadaisme
+                <form action="https://nannasiw.dk/kea/02-grundlaeggende-indhold/02_02_06_redesign/">
+                    <button type="submit">Link til redesign af TCdesign.dk
                     </button>
                 </form>
 
-
+                <form action="">
+                    <button type="submit">Link til dokumentationssitet
+                    </button>
+                </form>
             </div>
 
 
@@ -72,18 +75,13 @@
 
 
             <div class="column">
-                <h2 class="h2_dada">Formål for tema</h2>
-                <p class="tekst_tema">I temaet grundlæggende web har vi lært forskellige redskaber, såsom HTML og CSS. Vi er blevet introduceret til grundlæggende faglige begreber indenfor design af digitaler brugergrænseoverflader, digital indholdsproduktion, digital kommunikation og responsivt webdesign. Vi har lært at sætte websites op i HTML og css, og også første færdigheder inden for billedbehandling i Photoshop og layout, In-Design.</p>
+
 
                 <h2 class="h2_dada">Refleksion over opgaven</h2>
 
-                <p class="tekst_opgave"> Vi fik tildelt en opgave, hvor vi blev delt ud i nogle grupper, og hvor hver grupper fik sin egen stilart. Og ud for den stilart skulle vi lave vores egen hjemmeside som omhandlede den bestemte stilart, og min gruppe fik stilarten Dadaisme.
-                    Først og fremmest lavede vi en masse research om dadaisme - hvad den gik ud på, og hvad den indebar. For at få et større overblik over selve stilarten, dens tendenser og farver, lavede vi først vores moodboard.
-
-                    Vi blev delt ud i grupper, og fik tildelt en opgave, som gik ud på at vi skulle lave vores egen hjemmeside med en bestemt stilart. Min gruppe fik Dadaisme. Først og fremmest lavede vi en masse research om dadaisme og hvad den gik ud på, og hvad den indebar.
-                    Efter en del research omkring vores stilart, gik vi i gang med HTML og CSS.
-                    Da det var vores første rigtig hjemmeside vi skulle lave, havde vi en del øvelser omkring flexbox og CSS og lærte om forskellige layout principper. Og dette gjorde at vi fik en større indblik i hvordan man kunne sætte en eventuel hjemmeside op.
-                    Udover hjemmesiden skulle vi også lave et splashbillede, som vores forside-billede til hjemmeside. Jeg tog udgangspunkt i Dadaismens metoder og farver, og tog også udgangspunkt i andre billeder indenfor stilarten. </p>
+                <p class="tekst_opgave">I temaet grundlæggende indhold, handlede det primært om, at få en ide om hvordan man håndterede komposition, og layout i både video og stilbilleder. Først og fremmest blev vi introduceret til en ny måde at analysere websites udfra Bert-testen. Bert-testen er en bipolær emotionrl respons test, som knyttes til de værdier, man gerne vil udstråle. Den er rigtig god til sammenligning af websites, som vi også gjorde i dette forløb, hvor vi lavede sammenligning af den eksisterende site og af det nye redesignet site. Bert-test giver dig en kvantitativ analyse.
+                    Vi fokuserede på at holde farverne neutrale, og tænke på hvilke farver der kunne passe til en tømrers hjemmeside. Vi designede nogle ikoner i llustrator, som skulle illustrere på hans hjemmeside, de arbejdsopgaver han udførte for sine kunder.
+                    Vi brugte vores færdigheder indenfor HTML og CSS, for at skabe en god og ny hjemmeside for virksomheden. Og for at skabe struktur over hvordan vi ville gøre det, skitsede vi først wireframes i hånden, og derefter lavede vi layoutet i indesign, så vi havde en ide om, hvordan vi ville have vores "kundes" hjemmeside skulle se ud.</p>
 
                 <div class="bottom">
                     <img src="img/moodboard_redesign.jpg" alt="redesign" class="center">
@@ -101,9 +99,3 @@
 </body>
 
 </html>
-
-
-
-
-
-
