--- a/stilartsite.html
+++ b/stilartsite.html
@@ -60,8 +60,8 @@
 
                 </div>
                 <h2 class="h2_dada">Formål for tema</h2>
-                <p class="tekst_tema">I grundlæggende web er vi blevet introduceret i, og lært hvordan man laver et responsivt site. Udover dette har vi fået færdigheder indenfor hvordan man laver flotte præsentationer med flotte layouts i CSS med flexbox, display, position, box osv. Det har også givet os en grundlæggende viden omkring web-fonte, margin og padding, farver og styling. </p>
-                <form action="mangler_link">
+                <p class="tekst_tema">I grundlæggende html er vi blevet introduceret i, og lært hvordan man laver et responsivt site. Udover dette har vi fået færdigheder indenfor hvordan man laver flotte præsentationer med layouts i CSS med flexbox, display, position, box osv. Det har også givet os en grundlæggende viden omkring web-fonte, margin og padding, farver og styling. </p>
+                <form action="https://nannasiw.dk/kea/01-web/04-responsive/01_04_01_responsive_sitev1/index.html#splash">
                     <button type="submit">Link til dadaisme
                     </button>
                 </form>
@@ -78,15 +78,12 @@
 
                 <h2 class="h2_dada">Refleksion over opgaven</h2>
 
-                <p class="tekst_opgave"> I dette forløb fik vi tildelt en opgave, hvori den bestod af, at vi skulle lave vores første responsive website. Vi fik tildelt en stilart i nogle forskellige grupper, hvor jeg fik dadaisme. Udfra den bestemte stilart, skulle vi lave en masse research, hvor og udfra den skulle vi lave en masse research
+                <p class="tekst_opgave"> I dette forløb fik vi tildelt en opgave, hvori den bestod af, at vi skulle lave vores første responsive website der omhandlede en stilart. Her fik jeg så dadaisme. Udfra den bestemte stilart, skulle vi lave en masse research, for at finde billeder, kunstnere og ren formalia omkring stilarten. I opgaven fik vi også en introduktion til at bruge google- eller webfonte, for at skabe en rød linje til hele opgaven, og for at det passede sammen.
 
-                    Vi fik tildelt en opgave, hvor vi blev delt ud i nogle grupper, og hvor hver gruppe fik sin egen stilart. Og ud for den stilart skulle vi lave vores egen hjemmeside som omhandlede den bestemte stilart, og min gruppe fik stilarten Dadaisme.
-                    Først og fremmest lavede vi en masse research om dadaisme - hvad den gik ud på, og hvad den indebar. For at få et større overblik over selve stilarten, dens tendenser og farver, lavede vi først vores moodboard.
+                    For at lave et fint splashbillede til forsiden, så benyttede vi Photoshop til dette, og for også at gøre ens splashbillede responsivt, skulle vi lave splashbilledet så det passede både til mobile, destkop og tablet. Jeg fandt frem til mit splashbillede, da jeg havde lavet en farvepalette i color adobe wheel udfra et tilfældigt billede som var fra dadaisme.
 
-                    Vi blev delt ud i grupper, og fik tildelt en opgave, som gik ud på at vi skulle lave vores egen hjemmeside med en bestemt stilart. Min gruppe fik Dadaisme. Først og fremmest lavede vi en masse research om dadaisme og hvad den gik ud på, og hvad den indebar.
-                    Efter en del research omkring vores stilart, gik vi i gang med HTML og CSS.
-                    Da det var vores første rigtig hjemmeside vi skulle lave, havde vi en del øvelser omkring flexbox og CSS og lærte om forskellige layout principper. Og dette gjorde at vi fik en større indblik i hvordan man kunne sætte en eventuel hjemmeside op.
-                    Udover hjemmesiden skulle vi også lave et splashbillede, som vores forside-billede til hjemmeside. Jeg tog udgangspunkt i Dadaismens metoder og farver, og tog også udgangspunkt i andre billeder indenfor stilarten. </p>
+
+                </p>
 
                 <div class="bottom">
                     <img src="img/stilartsitebillede.jpg" alt="dada" class="moodboard">
