opdatering af index

--- a/prototype.html
+++ b/prototype.html
@@ -34,7 +34,7 @@
             <div class="topnav">
                 <a class="active" href="index.html">Home</a>
                 <a href="index.html#om_mig">About</a>
-                <a href="#index.html#om_mig">Kontakt</a>
+                <a href="index.html#om_mig">Kontakt</a>
                 <a href="stilartsite.html">Dadaisme</a>
                 <a href="redesign.html">Redesign af TCdesign.dk</a>
                 <a href="prototype.html">Prototype af Fronter</a>
@@ -62,8 +62,13 @@
 
                 </div>
                 <h2 class="h2_proto">Formål for tema</h2>
-                <p class="tekst_tema">I temaet grundlæggende web har vi lært forskellige redskaber, såsom HTML og CSS. Vi er blevet introduceret til grundlæggende faglige begreber indenfor design af digitaler brugergrænseoverflader, digital indholdsproduktion, digital kommunikation og responsivt webdesign. Vi har lært at sætte websites op i HTML og css, og også første færdigheder inden for billedbehandling i Photoshop og layout, In-Design.</p>
-                <form action="http://nannasiw.dk/kea/04-ux/04_03 web prototype/login.html">
+                <p class="tekst_tema">I temaet grundlæggende UX handler om at give dig en forståelse og erfaring for, hvordan samspillet mellem brugere og brugergrænseoverflader. Vi er blevet introduceret og øvet i hvilke teorier, værktøjer og metoder vi kan benytte til research, design og test osv.
+                    Så alt i alt, at løsningen vi vil frem til, bliver ikke baseret på vores egne fornemmelser og ideer, men hvad reelle brugeres og målgrupppers behov. I dette tema er vi blevet introduceret til programmet Adobe XD.
+
+
+
+                </p>
+                <form action="http://nannasiw.dk/kea/04-ux/04_03_web_prototype/login.html">
                     <button type="submit">Link til prototype af Fronter
                     </button>
                 </form>
@@ -75,13 +80,8 @@
 
                 <h2 class="h2_proto">Refleksion over opgaven</h2>
 
-                <p class="tekst_opgave"> FOCUS VAR PROJEKTLEDELSE OG GRUPPEARBEJDEVi fik tildelt en opgave, hvor vi blev delt ud i nogle grupper, og hvor hver grupper fik sin egen stilart. Og ud for den stilart skulle vi lave vores egen hjemmeside som omhandlede den bestemte stilart, og min gruppe fik stilarten Dadaisme.
-                    Først og fremmest lavede vi en masse research om dadaisme - hvad den gik ud på, og hvad den indebar. For at få et større overblik over selve stilarten, dens tendenser og farver, lavede vi først vores moodboard.
-
-                    Vi blev delt ud i grupper, og fik tildelt en opgave, som gik ud på at vi skulle lave vores egen hjemmeside med en bestemt stilart. Min gruppe fik Dadaisme. Først og fremmest lavede vi en masse research om dadaisme og hvad den gik ud på, og hvad den indebar.
-                    Efter en del research omkring vores stilart, gik vi i gang med HTML og CSS.
-                    Da det var vores første rigtig hjemmeside vi skulle lave, havde vi en del øvelser omkring flexbox og CSS og lærte om forskellige layout principper. Og dette gjorde at vi fik en større indblik i hvordan man kunne sætte en eventuel hjemmeside op.
-                    Udover hjemmesiden skulle vi også lave et splashbillede, som vores forside-billede til hjemmeside. Jeg tog udgangspunkt i Dadaismens metoder og farver, og tog også udgangspunkt i andre billeder indenfor stilarten. </p>
+                <p class="tekst_opgave"> Fokuspunktet i dette forløb var projektledelse og gruppearbejde. Vi startede ud med at udfylde et "team canvas", hvori man beskriver ens forventninger, ens tanker og vendinger for hvad man tænker med forløbet m.m og med hensyn til gruppearbejdet. Som sagt er vi, i dette tema, blevet introduceret og øvet lidt i Adobe XD, hvori vi, før gruppearbejdet, skulle udarbejde en prototype i mobilefirst. I min gruppe tog vi udgangspunkt i en anden gruppemedlems prototype (se billeder). Somsagt var ideen i projektet at føre idéen ud, til et produkt der er brugervenligt.
+                </p>
 
                 <div class="bottom">
                     <img src="img/forside_fronter.png" alt="forside_proto" class="forside_fronter">
