--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="index.html">About</a></li>
                     <li><a href="index.html">Kontakt</a></li>
                     <li><a href="stilartsite.html">Dadaisme</a></li>
-                    <li><a href="redesign.html">Residesign af TCdesign.dk</a></li>
+                    <li><a href="redesign.html">Redesign af TCdesign.dk</a></li>
                     <li><a href="prototype.html">Prototype af Fronter</a></li>
 
 
