--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
                 <p>Jeg er en frisk, mødestabil, smilende og udadvendt pige på 20 år, som blev student i sommeren 2017. Jeg er oprindeligt født og opvokset på Lolland, men har boet i København i 4 år nu.
                     Jeg har efter min studentereksamen valgt at dyrke min nysgerrighed og villighed til at lære nyt. Og jeg er netop startet på Københavns Erhvervsakademi, hvor jeg studerer multimediedesign på 1. semester.
-                    Jeg elsker at gøre mennesker glade, og yde mit bedste overfor andre. Jeg lærer hurtigt nye ting, og er god til at arbejde selvstændigt og i team. Jeg har ry for at være en loyal, glad, smilende, servicemindet og imødekommende pige, som skaber tillidsfuld kontakt til andre.
+                    Jeg elsker at gøre mennesker glade, og yde mit bedste overfor andre. Jeg har ry for at være en loyal, glad, smilende, servicemindet og imødekommende pige, som skaber tillidsfuld kontakt til andre.Jeg lærer hurtigt nye ting, og er god til at arbejde selvstændigt og i team.
                 </p>
 
 
