--- a/redesign.html
+++ b/redesign.html
@@ -22,7 +22,7 @@
                     <li><a href="index.html#om_mig">About</a></li>
                     <li><a href="index.html#om_mig">Kontakt</a></li>
                     <li><a href="stilartsite.html">Dadaisme</a></li>
-                    <li><a href="redesign.html">Residesign af TCdesign.dk</a></li>
+                    <li><a href="redesign.html">Redesign af TCdesign.dk</a></li>
                     <li><a href="prototype.html">Prototype af Fronter</a></li>
 
 
