final portfolio eksamen

--- a/redesign.html
+++ b/redesign.html
@@ -59,10 +59,6 @@
 
                 </div>
 
-                <form action="https://nannasiw.dk/kea/02-grundlaeggende-indhold/02_02_06_redesign/">
-                    <button type="submit">Link til redesign af TCdesign.dk
-                    </button>
-                </form>
 
 
             </div>
@@ -83,7 +79,14 @@
 
 
                 </div>
-
+                <form action="https://nannasiw.dk/kea/02-grundlaeggende-indhold/02_02_06_redesign/">
+                    <button type="submit">Link til redesign af TCdesign.dk
+                    </button>
+                </form>
+                <form action="https://nannasiw.dk/kea/02-grundlaeggende-indhold/dokumentationssite_redesign/index.html">
+                    <button type="submit">Link til dokumentationssite
+                    </button>
+                </form>
             </div>
         </div>
     </section>
